# 0010capacity.github.io

./: .gitignore  404.html  CHANGELOG_2024_UI_IMPROVEMENTS.md  COMPLETION_REPORT_2024.md  DESIGN_REVIEW.md  FRONTEND_REDESIGN.md  PHASE1_SUMMARY.md  PLAN.md  README.md  SETUP.md  UI_UX_IMPROVEMENTS.md  blog_post.md  index.html  index.txt  next.config.ts  package-lock.json  package.json  robots.txt  sitemap.xml  tsconfig.json
.github/: copilot-instructions.md
.next/: trace
404/: index.html
about/: index.html  index.txt
app/: layout.tsx  page.tsx  sitemap.ts
apps/: index.html  index.txt
backend/: .env.example  .sqlx  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 20240101000000_reset_database.sql  20240101000001_create_novels.sql  20240101000002_create_novel_chapters.sql  20240101000003_create_blog_posts.sql  20240101000004_create_apps.sql  20240101000005_create_admins.sql  20240101000006_update_novels_schema.sql  20240101000007_update_apps_platforms.sql  20240101000008_allow_nullable_chapter_titles.sql  20240101000009_delete_all_data.sql  20240524000000_add_blog_columns.sql  20240524000001_add_app_columns.sql  20250101000000_add_unique_constraint_novel_relations.sql  20250206_reset_database.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  pool.rs
backend/src/middleware/: auth.rs
backend/src/models/: app.rs  auth.rs  blog.rs  mod.rs  novel.rs
backend/src/routes/: apps.rs  auth.rs  blog.rs  mod.rs  novels.rs
backend/src/utils/: html.rs
blog/: index.html  index.txt
components/: Badge.tsx  Button.tsx  Card.tsx  (+5 more)
(+321 files in other folders)
